@@ -18,13 +18,6 @@ import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.sensi.*;
 import com.powsybl.openloadflow.util.LoadFlowAssert;
 import com.powsybl.sensitivity.*;
-import com.powsybl.sensitivity.factors.BranchFlowPerInjectionIncrease;
-import com.powsybl.sensitivity.factors.BranchFlowPerLinearGlsk;
-import com.powsybl.sensitivity.factors.BranchFlowPerPSTAngle;
-import com.powsybl.sensitivity.factors.functions.BranchFlow;
-import com.powsybl.sensitivity.factors.variables.InjectionIncrease;
-import com.powsybl.sensitivity.factors.variables.LinearGlsk;
-import com.powsybl.sensitivity.factors.variables.PhaseTapChangerAngle;
 import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormat;
 import org.junit.jupiter.api.Test;
@@ -56,20 +49,20 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l23");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(5, result.getSensitivityValues().size());
+        assertEquals(5, result.getValues().size());
         assertEquals(0.05d, getValue(result, "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.35d, getValue(result, "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.25d, getValue(result, "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.15d, getValue(result, "g2", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.1d, getValue(result, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(5, result.getSensitivityValuesContingencies().get("l23").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(5, result.getValues("l23").size());
         assertEquals(2d / 15d, getContingencyValue(result, "l23", "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.6d, getContingencyValue(result, "l23", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l23", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -87,20 +80,20 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         List<Contingency> contingencies = List.of(new Contingency(l.getId(), new BranchContingency(l.getId())));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l12");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(5, result.getSensitivityValues().size());
+        assertEquals(5, result.getValues().size());
         assertEquals(0.05d, getValue(result, "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.35d, getValue(result, "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.25d, getValue(result, "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.15d, getValue(result, "g2", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.1d, getValue(result, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(5, result.getSensitivityValuesContingencies().get("l12").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(5, result.getValues("l12").size());
         assertEquals(-1d / 15d, getContingencyValue(result, "l12", "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l12", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.6d, getContingencyValue(result, "l12", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -121,35 +114,35 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             @Override
             public List<SensitivityFactor> getCommonFactors(Network network) {
                 List<SensitivityFactor> commonFactors = new ArrayList<>(1);
-                commonFactors.add(new BranchFlowPerInjectionIncrease(new BranchFlow("l13", "l13", "l13"), new InjectionIncrease("g2", "g2", "g2")));
+                commonFactors.add(createBranchFlowPerInjectionIncrease("l13", "g2"));
                 return commonFactors;
             }
 
             @Override
             public List<SensitivityFactor> getAdditionalFactors(Network network) {
                 List<SensitivityFactor> commonFactors = new ArrayList<>(1);
-                commonFactors.add(new BranchFlowPerInjectionIncrease(new BranchFlow("l14", "l14", "l14"), new InjectionIncrease("g2", "g2", "g2")));
+                commonFactors.add(createBranchFlowPerInjectionIncrease("l14", "g2"));
                 return commonFactors;
             }
 
             @Override
             public List<SensitivityFactor> getAdditionalFactors(Network network, String contingencyId) {
                 List<SensitivityFactor> commonFactors = new ArrayList<>(1);
-                commonFactors.add(new BranchFlowPerInjectionIncrease(new BranchFlow("l34", "l34", "l34"), new InjectionIncrease("g2", "g2", "g2")));
-                commonFactors.add(new BranchFlowPerInjectionIncrease(new BranchFlow("l12", "l12", "l12"), new InjectionIncrease("g2", "g2", "g2")));
+                commonFactors.add(createBranchFlowPerInjectionIncrease("l34", "g2"));
+                commonFactors.add(createBranchFlowPerInjectionIncrease("l12", "g2"));
                 return commonFactors;
             }
         };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(2, result.getSensitivityValues().size());
+        assertEquals(2, result.getValues().size());
         assertEquals(0.05d, getValue(result, "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.1d, getValue(result, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(3, result.getSensitivityValuesContingencies().get("l12").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(3, result.getValues("l12").size());
         assertEquals(0d, getContingencyValue(result, "l12", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(4d / 15d, getContingencyValue(result, "l12", "g2", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyValue(result, "l12", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -165,7 +158,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
@@ -188,7 +181,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
@@ -213,20 +206,20 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         List<Contingency> contingencies = List.of(new Contingency("l23+l34", new BranchContingency("l23"), new BranchContingency("l34")));
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().filter(gen -> gen.getId().equals("g2")).collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l23+l34");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(5, result.getSensitivityValues().size());
+        assertEquals(5, result.getValues().size());
         assertEquals(0.05d, getValue(result, "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.35d, getValue(result, "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.25d, getValue(result, "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.15d, getValue(result, "g2", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.1d, getValue(result, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(5, result.getSensitivityValuesContingencies().get("l23+l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(5, result.getValues("l23+l34").size());
         assertEquals(0.2, getContingencyValue(result, "l23+l34", "g2", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.6d, getContingencyValue(result, "l23+l34", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l23+l34", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -241,13 +234,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(14, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(14, result.getValues("l34").size());
         assertEquals(-2d / 3d, getContingencyValue(result, "l34", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyValue(result, "l34", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyValue(result, "l34", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -273,13 +266,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(14, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(14, result.getValues("l34").size());
         assertEquals(-0.5d, getContingencyValue(result, "l34", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.5d, getContingencyValue(result, "l34", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l34", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -317,12 +310,12 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                     network.getBranchStream().filter(b -> !b.equals(branch)).collect(Collectors.toList()));
             }
         };
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(14, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValues().size());
+        assertEquals(14, result.getValues("l34").size());
         assertEquals(-0.5d, getContingencyValue(result, "l34", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.5d, getContingencyValue(result, "l34", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l34", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -347,13 +340,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34+l48", new BranchContingency("l34"), new BranchContingency("l48")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34+l48");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(36, result.getSensitivityValuesContingencies().get("l34+l48").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(36, result.getValues("l34+l48").size());
 
         assertEquals(-2d / 3d, getContingencyValue(result, "l34+l48", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyValue(result, "l34+l48", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -403,13 +396,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34+l45", new BranchContingency("l34"), new BranchContingency("l45")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34+l45");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(16, result.getSensitivityValuesContingencies().get("l34+l45").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(16, result.getValues("l34+l45").size());
 
         assertEquals(-2d / 3d, getContingencyValue(result, "l34+l45", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyValue(result, "l34+l45", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -437,13 +430,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34+l47", new BranchContingency("l34"), new BranchContingency("l47")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34+l47");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(33, result.getSensitivityValuesContingencies().get("l34+l47").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(33, result.getValues("l34+l47").size());
 
         assertEquals(-2d / 3d, getContingencyValue(result, "l34+l47", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyValue(result, "l34+l47", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -488,7 +481,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getLoadStream().collect(Collectors.toList()),
                 network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault()).join();
 
         assertEquals(0d, getContingencyValue(result, "l34", "d1", "l45"), LoadFlowAssert.DELTA_POWER);
@@ -513,25 +506,24 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         TwoWindingsTransformer ps1 = network.getTwoWindingsTransformer("l23");
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerPSTAngle(createBranchFlow(branch),
-                    new PhaseTapChangerAngle(ps1.getId(), ps1.getNameOrId(), ps1.getId()))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerPSTAngle(branch.getId(), ps1.getId(), "l14")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l14", new BranchContingency("l14")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(5, result.getSensitivityValues().size());
+        assertEquals(5, result.getValues().size());
         assertEquals(15d / 4d * Math.PI / 180d, getValue(result, "l23", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-10d / 4d * Math.PI / 180d, getValue(result, "l23", "l13"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-5d / 4d * Math.PI / 180d, getValue(result, "l23", "l14"), LoadFlowAssert.DELTA_POWER);
         assertEquals(15d / 4d * Math.PI / 180d, getValue(result, "l23", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(5d / 4d * Math.PI / 180d, getValue(result, "l23", "l34"), LoadFlowAssert.DELTA_POWER);
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(5, result.getSensitivityValuesContingencies().get("l14").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(5, result.getValues("l14").size());
 
         assertEquals(10d / 3d * Math.PI / 180d, getContingencyValue(result, "l14", "l23", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-10d / 3d * Math.PI / 180d, getContingencyValue(result, "l14", "l23", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -549,18 +541,17 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         TwoWindingsTransformer ps1 = network.getTwoWindingsTransformer("l56");
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerPSTAngle(createBranchFlow(branch),
-                    new PhaseTapChangerAngle(ps1.getId(), ps1.getNameOrId(), ps1.getId()))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerPSTAngle(branch.getId(), ps1.getId(), "l34")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l34").size());
 
         assertEquals(0d, getContingencyValue(result, "l34", "l56", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l34", "l56", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -580,18 +571,17 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         TwoWindingsTransformer ps1 = network.getTwoWindingsTransformer("l56");
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerPSTAngle(createBranchFlow(branch),
-                    new PhaseTapChangerAngle(ps1.getId(), ps1.getNameOrId(), ps1.getId()))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerPSTAngle(branch.getId(), ps1.getId(), "l56")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l56", new BranchContingency("l56")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l56").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l56").size());
 
         assertEquals(0d, getContingencyValue(result, "l56", "l56", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l56", "l56", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -607,18 +597,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createTwoCcLinkedByAHvdcWithGenerators();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(6, contingencyResult.size());
         assertEquals(1d / 3d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 6d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -637,18 +625,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createTwoCcLinkedByAHvdcVscWithGenerators();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(6, contingencyResult.size());
         assertEquals(1d / 3d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 6d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -668,18 +654,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(6, contingencyResult.size());
         assertEquals(2d / 3d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -698,18 +682,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createNetworkWithGenerators();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(7, contingencyResult.size());
         assertEquals(0.5d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.25d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -733,18 +715,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createNetworkWithGenerators();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"), new BranchContingency("l25")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(7, contingencyResult.size());
         assertEquals(1d / 3d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 6d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -768,18 +748,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createNetworkWithTransformer();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1", "g2").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"), new BranchContingency("l23")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(6, contingencyResult.size());
         assertEquals(0.5d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -798,18 +776,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createLinkedNetworkWithTransformer();
 
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-        SensitivityFactorsProvider factorsProvider = n -> {
-            return createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
-                List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()));
-        };
+        SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(List.of("g1").stream().map(network::getGenerator).collect(Collectors.toList()),
+            List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56").stream().map(network::getBranch).collect(Collectors.toList()), "hvdc34");
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"), new BranchContingency("l23"), new BranchContingency("l25")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        List<SensitivityValue> contingencyResult = result.getSensitivityValuesContingencies().get("hvdc34");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        List<SensitivityValue> contingencyResult = result.getValues("hvdc34");
         assertEquals(7, contingencyResult.size());
         assertEquals(0.5d, getValue(contingencyResult, "g1", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getValue(contingencyResult, "g1", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -867,13 +843,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
         List<Contingency> contingencies = List.of(new Contingency("l24+l35", new BranchContingency("l24"), new BranchContingency("l35")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l24+l35");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(16, result.getSensitivityValuesContingencies().get("l24+l35").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(16, result.getValues("l24+l35").size());
         assertEquals(-0.5d, getContingencyValue(result, "l24+l35", "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.5d, getContingencyValue(result, "l24+l35", "g2", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(result, "l24+l35", "g2", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -901,14 +877,14 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
         List<Contingency> contingencies = List.of(new Contingency("l34+l27+l58", new BranchContingency("l34"), new BranchContingency("l27"), new BranchContingency("l58")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l34+l27+l58");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(36, result.getSensitivityValuesContingencies().get("l34+l27+l58").size());
-        List<SensitivityValue> contingencyValues = result.getSensitivityValuesContingencies().get("l34+l27+l58");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(36, result.getValues("l34+l27+l58").size());
+        List<SensitivityValue> contingencyValues = result.getValues("l34+l27+l58");
         assertEquals(-2d / 3d, getContingencyValue(contingencyValues, "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyValue(contingencyValues, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyValue(contingencyValues, "g2", "l23"), LoadFlowAssert.DELTA_POWER);
@@ -928,14 +904,14 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
         List<Contingency> contingencies = List.of(new Contingency("l27+l18+l39+l14", new BranchContingency("l27"), new BranchContingency("l18"), new BranchContingency("l39"), new BranchContingency("l14")));
         SensitivityFactorsProvider factorsProvider = n -> createFactorMatrix(network.getGeneratorStream().collect(Collectors.toList()),
-                network.getBranchStream().collect(Collectors.toList()));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+                network.getBranchStream().collect(Collectors.toList()), "l27+l18+l39+l14");
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(39, result.getSensitivityValuesContingencies().get("l27+l18+l39+l14").size());
-        List<SensitivityValue> contingencyValues = result.getSensitivityValuesContingencies().get("l27+l18+l39+l14");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(39, result.getValues("l27+l18+l39+l14").size());
+        List<SensitivityValue> contingencyValues = result.getValues("l27+l18+l39+l14");
         assertEquals(-2d / 3d, getContingencyValue(contingencyValues, "g2", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyValue(contingencyValues, "g2", "l13"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(contingencyValues, "g2", "l14"), LoadFlowAssert.DELTA_POWER);
@@ -986,21 +962,19 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
 
-        Map<String, Float> glskMap = new HashMap<>();
-        glskMap.put("g2", 25f);
-        glskMap.put("g6", 40f);
-        glskMap.put("d3", 35f);
-        LinearGlsk linearGlsk = new LinearGlsk("glsk", "glsk", glskMap);
-        SensitivityFactorsProvider factorsProvider = n -> network.getBranchStream().map(branch -> new BranchFlowPerLinearGlsk(
-            createBranchFlow(branch),
-            linearGlsk
-        )).collect(Collectors.toList());
+        List<WeightedSensitivityVariable> variables = new ArrayList<>();
+        variables.add(new WeightedSensitivityVariable("g2", 25f));
+        variables.add(new WeightedSensitivityVariable("g6", 40f));
+        variables.add(new WeightedSensitivityVariable("d3", 35f));
+        List<SensitivityVariableSet> variableSets = Collections.singletonList(new SensitivityVariableSet("glsk", variables));
+
+        SensitivityFactorsProvider factorsProvider = n -> network.getBranchStream().map(branch -> createBranchFlowPerLinearGlsk(branch.getId(), "glsk", "l34")).collect(Collectors.toList());
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
-                sensiParameters, LocalComputationManager.getDefault())
+                variableSets, sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l34").size());
         assertEquals(-17d / 36d, getContingencyValue(result, "l34", "glsk", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 18d, getContingencyValue(result, "l34", "glsk", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-19d / 36d, getContingencyValue(result, "l34", "glsk", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -1016,25 +990,23 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
 
-        Map<String, Float> glskMap = new HashMap<>();
-        glskMap.put("g2", 25f);
-        glskMap.put("g6", 40f);
-        glskMap.put("g10", 35f);
-        LinearGlsk linearGlsk = new LinearGlsk("glsk", "glsk", glskMap);
-        SensitivityFactorsProvider factorsProvider = n -> network.getBranchStream().map(branch -> new BranchFlowPerLinearGlsk(
-                createBranchFlow(branch),
-                linearGlsk
-        )).collect(Collectors.toList());
+        List<WeightedSensitivityVariable> variables = new ArrayList<>();
+        variables.add(new WeightedSensitivityVariable("g2", 25f));
+        variables.add(new WeightedSensitivityVariable("g6", 40f));
+        variables.add(new WeightedSensitivityVariable("g10", 35f));
+        List<SensitivityVariableSet> variableSets = Collections.singletonList(new SensitivityVariableSet("glsk", variables));
+
+        SensitivityFactorsProvider factorsProvider = n -> network.getBranchStream().map(branch -> createBranchFlowPerLinearGlsk(branch.getId(), "glsk")).collect(Collectors.toList());
 
         List<Contingency> contingencies = List.of(new Contingency("l45", new BranchContingency("l45")));
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
-                sensiParameters, LocalComputationManager.getDefault())
+                variableSets, sensiParameters, LocalComputationManager.getDefault())
                 .join();
 
         List<Contingency> contingencies2 = List.of(new Contingency("l34", new BranchContingency("l34")),
                                                    new Contingency("l45", new BranchContingency("l45")));
         SensitivityAnalysisResult result2 = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies2,
-                sensiParameters, LocalComputationManager.getDefault())
+                variableSets, sensiParameters, LocalComputationManager.getDefault())
                 .join();
 
         // result for l45 contingency should exactly be the same as l34 contingency for simulation 2 should not impact
@@ -1055,11 +1027,12 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", false);
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
 
-        Map<String, Float> glskMap = new HashMap<>();
-        glskMap.put("g2", 25f);
-        glskMap.put("g6", 40f);
-        glskMap.put("d3", 35f);
-        LinearGlsk linearGlsk = new LinearGlsk("glsk", "glsk", glskMap);
+        List<WeightedSensitivityVariable> variables = new ArrayList<>();
+        variables.add(new WeightedSensitivityVariable("g2", 25f));
+        variables.add(new WeightedSensitivityVariable("g6", 40f));
+        variables.add(new WeightedSensitivityVariable("d3", 35f));
+        List<SensitivityVariableSet> variableSets = Collections.singletonList(new SensitivityVariableSet("glsk", variables));
+
         SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
             @Override
             public List<SensitivityFactor> getCommonFactors(Network network) {
@@ -1068,18 +1041,15 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
 
             @Override
             public List<SensitivityFactor> getAdditionalFactors(Network network, String contingencyId) {
-                return network.getBranchStream().map(branch -> new BranchFlowPerLinearGlsk(
-                    createBranchFlow(branch),
-                    linearGlsk
-                )).collect(Collectors.toList());
+                return network.getBranchStream().map(branch -> createBranchFlowPerLinearGlsk(branch.getId(), "glsk", contingencyId)).collect(Collectors.toList());
             }
         };
         SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
-            sensiParameters, LocalComputationManager.getDefault())
+            variableSets, sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l34").size());
         assertEquals(-17d / 36d, getContingencyValue(result, "l34", "glsk", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 18d, getContingencyValue(result, "l34", "glsk", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-19d / 36d, getContingencyValue(result, "l34", "glsk", "l13"), LoadFlowAssert.DELTA_POWER);
@@ -1114,9 +1084,9 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
             ));
 
         ContingencyContext contingencyContext = ContingencyContext.all();
-        List<SensitivityFactor2> factors = SensitivityFactor2.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
+        List<SensitivityFactor> factors = SensitivityFactor.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
                                                                            SensitivityVariableType.HVDC_LINE_ACTIVE_POWER, List.of("hvdc34"), false, contingencyContext);
-        SensitivityAnalysisResult2 result = sensiProvider.run(network, Collections.singletonList(new Contingency("l25", new BranchContingency("l25"))), Collections.emptyList(),
+        SensitivityAnalysisResult result = sensiProvider.run(network, Collections.singletonList(new Contingency("l25", new BranchContingency("l25"))), Collections.emptyList(),
                 sensiParameters, factors);
 
         assertEquals(loadFlowDiff.get("l12"), result.getValue("l25", "l12", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
@@ -1137,10 +1107,10 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
 
         ContingencyContext contingencyContext = ContingencyContext.all();
-        List<SensitivityFactor2> factors = SensitivityFactor2.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
+        List<SensitivityFactor> factors = SensitivityFactor.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
                                                                            SensitivityVariableType.HVDC_LINE_ACTIVE_POWER, List.of("hvdc34"), false, contingencyContext);
 
-        SensitivityAnalysisResult2 result = sensiProvider.run(network, Collections.singletonList(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"))), Collections.emptyList(),
+        SensitivityAnalysisResult result = sensiProvider.run(network, Collections.singletonList(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"))), Collections.emptyList(),
                 sensiParameters, factors);
 
         assertEquals(0d, result.getValue("hvdc34", "l12", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
@@ -1160,10 +1130,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
 
         List<SensitivityFactor> factors = new ArrayList<>();
-        network.getBranchStream().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(
-                createBranchFlow(branch),
-                new InjectionIncrease("d5", "d5", "d5")
-        )));
+        network.getBranchStream().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "d5", "l23+l24+l36+l35+l46")));
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
 
@@ -1176,13 +1143,13 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                 new BranchContingency("l46")
         ));
 
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(11, result.getSensitivityValuesContingencies().get("l23+l24+l36+l35+l46").size());
-        List<SensitivityValue> contingencyValues = result.getSensitivityValuesContingencies().get("l23+l24+l36+l35+l46");
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(11, result.getValues("l23+l24+l36+l35+l46").size());
+        List<SensitivityValue> contingencyValues = result.getValues("l23+l24+l36+l35+l46");
         assertEquals(0d, getContingencyValue(contingencyValues, "d5", "l12"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(contingencyValues, "d5", "l23"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0d, getContingencyValue(contingencyValues, "d5", "l24"), LoadFlowAssert.DELTA_POWER);
@@ -1204,10 +1171,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
 
         List<SensitivityFactor> factors = new ArrayList<>();
-        network.getBranchStream().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(
-                createBranchFlow(branch),
-                new InjectionIncrease("d5", "d5", "d5")
-        )));
+        network.getBranchStream().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "d5")));
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
         List<String> contingencyBranchesId = Arrays.asList("l23", "l24", "l36", "l35", "l46");
@@ -1217,7 +1181,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                 contingencyBranchesId.stream().map(BranchContingency::new).collect(Collectors.toList())
         ));
 
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
         Network networkDisconnected = ConnectedComponentNetworkFactory.createHighlyConnectedNetwork();
@@ -1241,10 +1205,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
 
         List<SensitivityFactor> factors = new ArrayList<>();
-        network.getBranchStream().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(
-                createBranchFlow(branch),
-                new InjectionIncrease("g2", "g2", "g2")
-        )));
+        network.getBranchStream().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "g2")));
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
         List<String> contingencyBranchesId = Arrays.asList("l24", "l35");
@@ -1254,7 +1215,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                 contingencyBranchesId.stream().map(BranchContingency::new).collect(Collectors.toList())
         ));
 
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                                                         .join();
 
@@ -1284,10 +1245,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         String branchId = "l36";
         String injectionId = "g3";
         Branch branch = network.getBranch(branchId);
-        List<SensitivityFactor> factors = List.of(new BranchFlowPerInjectionIncrease(
-                createBranchFlow(branch),
-                new InjectionIncrease(injectionId, injectionId, injectionId)
-        ));
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease(branch.getId(), injectionId));
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
 
@@ -1295,7 +1253,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Contingency contingency12 = new Contingency("l12", new BranchContingency("l12"));
         Contingency contingency35and56and57 = new Contingency("l35+l56+l57", new BranchContingency("l35"),  new BranchContingency("l56"),  new BranchContingency("l57"));
 
-        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, sensiParameters, LocalComputationManager.getDefault()).join();
+        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
 
         SensitivityAnalysisResult result78 = resultProvider.apply(List.of(contingency78));
         SensitivityAnalysisResult result12 = resultProvider.apply(List.of(contingency12));
@@ -1319,10 +1277,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         String branchId = "l36";
         String injectionId = "g3";
         Branch branch = network.getBranch(branchId);
-        List<SensitivityFactor> factors = List.of(new BranchFlowPerInjectionIncrease(
-            createBranchFlow(branch),
-            new InjectionIncrease(injectionId, injectionId, injectionId)
-        ));
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease(branch.getId(), injectionId));
 
         SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
             @Override
@@ -1340,7 +1295,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Contingency contingency12 = new Contingency("l12", new BranchContingency("l12"));
         Contingency contingency35and56and57 = new Contingency("l35+l56+l57", new BranchContingency("l35"),  new BranchContingency("l56"),  new BranchContingency("l57"));
 
-        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, sensiParameters, LocalComputationManager.getDefault()).join();
+        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
 
         SensitivityAnalysisResult result78 = resultProvider.apply(List.of(contingency78));
         SensitivityAnalysisResult result12 = resultProvider.apply(List.of(contingency12));
@@ -1365,10 +1320,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         String branchId = "l36";
         String injectionId = "g3";
         Branch branch = network.getBranch(branchId);
-        List<SensitivityFactor> factors = List.of(new BranchFlowPerInjectionIncrease(
-                createBranchFlow(branch),
-                new InjectionIncrease(injectionId, injectionId, injectionId)
-        ));
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerInjectionIncrease(branch.getId(), injectionId));
 
         SensitivityFactorsProvider factorsProvider = net -> factors;
 
@@ -1376,7 +1328,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Contingency contingency12 = new Contingency("l12", new BranchContingency("l12")); // change distribution
         Contingency contingency35and56and57 = new Contingency("l35+l56+l57", new BranchContingency("l35"),  new BranchContingency("l56"),  new BranchContingency("l57"));
 
-        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, sensiParameters, LocalComputationManager.getDefault()).join();
+        Function<List<Contingency>, SensitivityAnalysisResult> resultProvider = contingencies -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault()).join();
 
         SensitivityAnalysisResult result78 = resultProvider.apply(List.of(contingency78));
         SensitivityAnalysisResult result12 = resultProvider.apply(List.of(contingency12));
@@ -1395,18 +1347,17 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                new InjectionIncrease("g2", "g2", "g2"))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "g2", "l56")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l56", new BranchContingency("l56")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l56").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l56").size());
 
         assertEquals(-4d / 3d, getContingencyFunctionReference(result, "l12", "l56"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyFunctionReference(result, "l13", "l56"), LoadFlowAssert.DELTA_POWER);
@@ -1424,17 +1375,16 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                new InjectionIncrease("g2", "g2", "g2"))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "g2", "l48+l67")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l48+l67", new BranchContingency("l48"), new BranchContingency("l67")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
+        assertEquals(1, result.getValuesByContingencyId().size());
 
         assertEquals(-4d / 3d, getContingencyFunctionReference(result, "l12", "l48+l67"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyFunctionReference(result, "l13", "l48+l67"), LoadFlowAssert.DELTA_POWER);
@@ -1455,27 +1405,23 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityFactorsProvider factorsProvider = new SensitivityFactorsProvider() {
             @Override
             public List<SensitivityFactor> getCommonFactors(Network network) {
-                return Collections.singletonList(new BranchFlowPerInjectionIncrease(
-                    new BranchFlow("l12", "l12", "l12"),
-                    new InjectionIncrease("g2", "g2", "g2")
-                ));
+                return Collections.singletonList(createBranchFlowPerInjectionIncrease("l12", "g2", "l48+l67"));
             }
 
             @Override
             public List<SensitivityFactor> getAdditionalFactors(Network network, String contingencyId) {
                 List<SensitivityFactor> factors = new LinkedList<>();
-                network.getBranchStream().filter(branch -> !branch.getId().equals("l12")).forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                    new InjectionIncrease("g2", "g2", "g2"))));
+                network.getBranchStream().filter(branch -> !branch.getId().equals("l12")).forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "g2", "l48+l67")));
                 return factors;
             }
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l48+l67", new BranchContingency("l48"), new BranchContingency("l67")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
+        assertEquals(1, result.getValuesByContingencyId().size());
 
         assertEquals(-4d / 3d, getContingencyFunctionReference(result, "l12", "l48+l67"), LoadFlowAssert.DELTA_POWER);
         assertEquals(1d / 3d, getContingencyFunctionReference(result, "l13", "l48+l67"), LoadFlowAssert.DELTA_POWER);
@@ -1495,18 +1441,17 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0");
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            network.getBranches().forEach(branch -> factors.add(new BranchFlowPerInjectionIncrease(createBranchFlow(branch),
-                new InjectionIncrease("g2", "g2", "g2"))));
+            network.getBranches().forEach(branch -> factors.add(createBranchFlowPerInjectionIncrease(branch.getId(), "g2", "l34")));
             return factors;
         };
 
         List<Contingency> contingencies = List.of(new Contingency("l34", new BranchContingency("l34")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
             sensiParameters, LocalComputationManager.getDefault())
             .join();
 
-        assertEquals(1, result.getSensitivityValuesContingencies().size());
-        assertEquals(7, result.getSensitivityValuesContingencies().get("l34").size());
+        assertEquals(1, result.getValuesByContingencyId().size());
+        assertEquals(7, result.getValues("l34").size());
 
         assertEquals(-5d / 3d, getContingencyFunctionReference(result, "l12", "l34"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-1d / 3d, getContingencyFunctionReference(result, "l13", "l34"), LoadFlowAssert.DELTA_POWER);
@@ -1525,23 +1470,22 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         SensitivityFactorsProvider factorsProvider = n -> {
             List<SensitivityFactor> factors = new LinkedList<>();
-            factors.add(new BranchFlowPerInjectionIncrease(new BranchFlow("l56", "l56", "l56"),
-                new InjectionIncrease("g2", "g2", "g2")));
+            factors.add(createBranchFlowPerInjectionIncrease("l56", "g2"));
             return factors;
         };
         Contingency transformerContingency = new Contingency("l67", new BranchContingency("l67")); // losing a transformer
         Contingency connectivityLosingContingency = new Contingency("l48", new BranchContingency("l48")); // losing connectivty
 
         SensitivityAnalysisResult resultBoth = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, List.of(transformerContingency, connectivityLosingContingency),
-            sensiParameters, LocalComputationManager.getDefault())
+            Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault())
             .join();
 
         SensitivityAnalysisResult resultLosingConnectivityAlone = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, List.of(connectivityLosingContingency),
-            sensiParameters, LocalComputationManager.getDefault())
+            Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault())
             .join();
 
         SensitivityAnalysisResult resultLosingTransformerAlone = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, List.of(transformerContingency),
-            sensiParameters, LocalComputationManager.getDefault())
+            Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault())
             .join();
 
         assertEquals(getContingencyFunctionReference(resultLosingConnectivityAlone, "l56", "l48"), getContingencyFunctionReference(resultBoth, "l56", "l48"), LoadFlowAssert.DELTA_POWER);
@@ -1560,7 +1504,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
 
         List<Contingency> contingencies = List.of(new Contingency("hvdc34", new HvdcLineContingency("wrong")));
         CompletionException e = assertThrows(CompletionException.class, () -> sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
-            sensiParameters, LocalComputationManager.getDefault())
+            Collections.emptyList(), sensiParameters, LocalComputationManager.getDefault())
             .join());
         assertTrue(e.getCause() instanceof PowsyblException);
         assertEquals("HVDC line 'wrong' not found in the network", e.getCause().getMessage());
@@ -1573,9 +1517,8 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
         List<Contingency> contingencies = List.of(new Contingency("l45", new BranchContingency("l45")));
-        SensitivityFactorsProvider factorsProvider = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l46", "l46", "l46"),
-                new InjectionIncrease("g2", "g2", "g2")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityFactorsProvider factorsProvider = n -> List.of(createBranchFlowPerInjectionIncrease("l46", "g2"));
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
 
@@ -1589,7 +1532,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         l45.getTerminal2().disconnect();
         runDcLf(network);
 
-        result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
 
@@ -1607,12 +1550,11 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        SensitivityFactorsProvider factorsProvider = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l45", "l45", "l45"),
-                new InjectionIncrease("g2", "g2", "g2")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(),
+        SensitivityFactorsProvider factorsProvider = n -> List.of(createBranchFlowPerInjectionIncrease("l45", "g2"));
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
-        assertEquals(1, result.getSensitivityValues().size());
+        assertEquals(1, result.getValues().size());
         // sensitivity on an open branch is zero
         assertEquals(0, getValue(result, "g2", "l45"), LoadFlowAssert.DELTA_POWER);
     }
@@ -1625,12 +1567,11 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        SensitivityFactorsProvider factorsProvider = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l45", "l45", "l45"),
-                new InjectionIncrease("g2", "g2", "g2")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(),
+        SensitivityFactorsProvider factorsProvider = n -> List.of(createBranchFlowPerInjectionIncrease("l45", "g2"));
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
-        assertEquals(1, result.getSensitivityValues().size());
+        assertEquals(1, result.getValues().size());
         // sensitivity on an open branch is zero
         assertEquals(0, getValue(result, "g2", "l45"), LoadFlowAssert.DELTA_POWER);
     }
@@ -1644,12 +1585,11 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         runDcLf(network);
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        SensitivityFactorsProvider factorsProvider = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l45", "l45", "l45"),
-                new InjectionIncrease("g2", "g2", "g2")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(),
+        SensitivityFactorsProvider factorsProvider = n -> List.of(createBranchFlowPerInjectionIncrease("l45", "g2"));
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, Collections.emptyList(), Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
-        assertEquals(1, result.getSensitivityValues().size());
+        assertEquals(1, result.getValues().size());
         // sensitivity on an open branch is zero
         assertEquals(0, getValue(result, "g2", "l45"), LoadFlowAssert.DELTA_POWER);
     }
@@ -1673,14 +1613,10 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                         new WeightedSensitivityVariable("g6", 40f),
                         new WeightedSensitivityVariable("d3", 35f))));
 
-        List<SensitivityFactor2> factors = List.of(new SensitivityFactor2(SensitivityFunctionType.BRANCH_ACTIVE_POWER, "l45",
-                                                                          SensitivityVariableType.INJECTION_ACTIVE_POWER, "glsk", true,
-                                                                          ContingencyContext.all()),
-                                                   new SensitivityFactor2(SensitivityFunctionType.BRANCH_ACTIVE_POWER, "l12",
-                                                                          SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2", false,
-                                                                          ContingencyContext.all()));
+        List<SensitivityFactor> factors = List.of(createBranchFlowPerLinearGlsk("l45", "glsk"),
+                                                  createBranchFlowPerInjectionIncrease("l12", "g2"));
 
-        SensitivityAnalysisResult2 result = sensiProvider.run(network, contingencies, variableSets, sensiParameters, factors);
+        SensitivityAnalysisResult result = sensiProvider.run(network, contingencies, variableSets, sensiParameters, factors);
 
         Path contingenciesFile = null;
         Path factorsFile = null;
@@ -1734,14 +1670,17 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         String dateStr = contingenciesFile.getFileName().toString().substring(14, 37);
         DateTime date = DateTime.parse(dateStr, DateTimeFormat.forPattern(OpenSensitivityAnalysisProvider.DATE_TIME_FORMAT));
 
-        List<SensitivityValue2> values2 = sensiProvider.replay(date, fileSystem.getPath(debugDir));
+        List<SensitivityValue> values2 = sensiProvider.replay(date, fileSystem.getPath(debugDir));
 
         // assert we have exactly the same result with replay
         assertEquals(result.getValues().size(), values2.size());
-        for (int i = 0; i < result.getValues().size(); i++) {
-            assertEquals(result.getValues().get(i).getContingencyId(), values2.get(i).getContingencyId());
-            assertEquals(result.getValues().get(i).getValue(), values2.get(i).getValue(), LoadFlowAssert.DELTA_POWER);
-            assertEquals(result.getValues().get(i).getFunctionReference(), values2.get(i).getFunctionReference(), LoadFlowAssert.DELTA_POWER);
+        Iterator<SensitivityValue> itExpected = values2.iterator();
+
+        for (SensitivityValue actual : result.getValues()) {
+            SensitivityValue expected = itExpected.next();
+            assertEquals(actual.getContingencyId(), expected.getContingencyId());
+            assertEquals(actual.getValue(), expected.getValue(), LoadFlowAssert.DELTA_POWER);
+            assertEquals(actual.getFunctionReference(), expected.getFunctionReference(), LoadFlowAssert.DELTA_POWER);
         }
     }
 
@@ -1750,13 +1689,12 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = DanglingLineFactory.createWithLoad();
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "vl3_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
-        SensitivityFactorsProvider factorsProvider = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l1", "l1", "l1"),
-                new InjectionIncrease("g1", "g1", "g1")));
+        SensitivityFactorsProvider factorsProvider = n -> List.of(createBranchFlowPerInjectionIncrease("l1", "g1", "dl1"));
         List<Contingency> contingencies = List.of(new Contingency("dl1", new DanglingLineContingency("dl1")));
-        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies,
+        SensitivityAnalysisResult result = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
-        assertEquals(1, result.getSensitivityValues().size());
+        assertEquals(1, result.getValues().size());
         assertEquals(0.1875, getValue(result, "g1", "l1"), LoadFlowAssert.DELTA_POWER);
         assertEquals(75.881, getFunctionReference(result, "l1"), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.1875, getContingencyValue(result, "dl1", "g1", "l1"), LoadFlowAssert.DELTA_POWER);
@@ -1779,13 +1717,12 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = DanglingLineFactory.createWithLoad();
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "vl3_0", true);
         sensiParameters.getLoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
-        SensitivityFactorsProvider factorsProvider2 = n -> List.of(new BranchFlowPerInjectionIncrease(new BranchFlow("l1", "l1", "l1"),
-                new InjectionIncrease("load3", "load3", "load3")));
+        SensitivityFactorsProvider factorsProvider2 = n -> List.of(createBranchFlowPerInjectionIncrease("l1", "load3", "dl1"));
         List<Contingency> contingencies = List.of(new Contingency("dl1", new DanglingLineContingency("dl1")));
-        SensitivityAnalysisResult result2 = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider2, contingencies,
+        SensitivityAnalysisResult result2 = sensiProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, factorsProvider2, contingencies, Collections.emptyList(),
                 sensiParameters, LocalComputationManager.getDefault())
                 .join();
-        assertEquals(1, result2.getSensitivityValues().size());
+        assertEquals(1, result2.getValues().size());
         assertEquals(-0.1874, getValue(result2, "load3", "l1"), LoadFlowAssert.DELTA_POWER);
         assertEquals(75.813, getFunctionReference(result2, "l1"), LoadFlowAssert.DELTA_POWER);
         assertEquals(-0.1875, getContingencyValue(result2, "dl1", "load3", "l1"), LoadFlowAssert.DELTA_POWER);
